Harden aggregation build and formatting